update harp and fix some broken styles

--- a/assets/styles.styl
+++ b/assets/styles.styl
@@ -8,14 +8,6 @@ sidebarWidth = 280px
 barColor = black
 barTextColor = white
 
-// paragraph()
-//   font-family "open sans", helvetica, arial
-//   // font-family 'roboto', helvetica, arial
-//   // font-family 'helvetica neue', helvetica, arial
-//
-// heading-font()
-//   font-family 'roboto slab'
-
 *
   -moz-box-sizing border-box
   -webkit-box-sizing border-box
@@ -213,7 +205,6 @@ h1,h2,h3
   line-height 1.2
   transition all 0.3s
   position relative
-  text-align center
   a
     &.permalink
       display inline-block
